# ordb

./: .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  MANIFEST.in  README.md  config-wizard.py  install.sh  ordb  ordb.py  ordb.rb.template  pyproject.toml  setup.cfg
db/: README.md
docs/: CLAUDE.md
src/ordb/: __init__.py  cli.py  config.py  core.py  display.py  pagination.py
tests/: README.md  run_all_tests.sh  run_integration_tests.sh  run_unit_tests.sh  stein_original.html  test_all_examples_and_config.py  test_character_replacement.py  test_cli_unit.py  test_compact_inflections.py  test_comprehensive_functionality.py  test_config.py  test_config_default_limit.py  test_core_unit.py  test_database_integrity.py  test_display_flags.py  test_display_unit.py  test_etymology_flags.py  test_examples_accuracy.py  test_expr_no_redundant_expressions.py  test_expr_search_flag.py  test_expressions.py  test_general_fixes.py  test_highlighting.py  test_improved_search.py  test_inflection_flags.py  test_only_examples_expressions.py  test_ordbokene.py  test_pagination.py  test_performance_report.md  test_recent_features.py  test_search_features.py
