[metadata]
name = ordb
version = attr: ordb.__version__
description = A fast, feature-rich command-line tool for searching the comprehensive Norwegian Bokmål dictionary
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/ordb
author = Konrad M. Lawson
license = MIT
license_files = LICENSE.md
project_urls =
    Documentation = https://docs.ordb.no
    Source = https://github.com/yourusername/ordb
    Tracker = https://github.com/yourusername/ordb/issues

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    ordb = ordb.cli:main

[options.package_data]
ordb = *.db

[bdist_wheel]
universal = 0